--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Web Developer - Bespoke Website Development | Louis Young</title>
+    <title>Software Developer - Web Developer | Louis Young</title>
     <meta name="theme-color" content="#4156d0" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -10,31 +10,31 @@
     <!-- SEO start. -->
     <meta
       name="description"
-      content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications to help benefit businesses."
+      content="Software Developer based in Cambridge creating fast, responsive, accessible and secure websites and applications to help benefit businesses. "
     />
     <link rel="canonical" href="https://www.louisyoung.co.uk" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Web Developer - Bespoke Website Development | Louis Young" />
-    <meta property="og:title" content="Louis Young - Web Developer" />
+    <meta property="og:site_name" content="Software Developer - Web Developer | Louis Young" />
+    <meta property="og:title" content="Louis Young - Software Developer" />
     <meta property="og:url" content="https://www.louisyoung.co.uk" />
     <meta
       property="og:description"
-      content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications to help benefit businesses."
+      content="Software Developer based in Cambridge creating fast, responsive, accessible and secure websites and applications to help benefit businesses. "
     />
     <meta
       property="og:image"
-      content="https://www.louisyoung.co.uk/assets/images/illustrations/front-end-web-developer.svg"
+      content="https://www.louisyoung.co.uk/assets/images/illustrations/software-developer.svg"
     />
     <meta name="twitter:site" content="https://www.louisyoung.co.uk" />
-    <meta name="twitter:title" content="Louis Young - Web Developer" />
+    <meta name="twitter:title" content="Louis Young - Software Developer" />
     <meta name="twitter:url" content="https://www.louisyoung.co.uk" />
     <meta
       name="twitter:description"
-      content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications to help benefit businesses."
+      content="Software Developer based in Cambridge creating fast, responsive, accessible and secure websites and applications to help benefit businesses. "
     />
     <meta
       name="twitter:image"
-      content="https://www.louisyoung.co.uk/assets/images/illustrations/front-end-web-developer.svg"
+      content="https://www.louisyoung.co.uk/assets/images/illustrations/software-developer.svg"
     />
     <!-- SEO end. -->
     <!-- Favicon start. -->
@@ -91,6 +91,9 @@
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
+              <a href="#top" class="navigation__link header__link">Home</a>
+            </li>
+            <!-- <li class="navigation__item">
               <a href="#skills" class="navigation__link header__link">Skills</a>
             </li>
             <li class="navigation__item">
@@ -98,7 +101,7 @@
             </li>
             <li class="navigation__item">
               <a href="#about" class="navigation__link header__link">About</a>
-            </li>
+            </li> -->
             <li class="navigation__item">
               <a
                 href="https://blog.louisyoung.co.uk/"
@@ -123,27 +126,26 @@
     <main class="background">
       <section class="introduction container" data-aos="fade-up" data-aos-duration="1500">
         <article class="introduction__content">
-          <h1 class="introduction__title">Web Developer</h1>
+          <h1 class="introduction__title">Software Developer</h1>
 
           <p class="introduction__content">
-            I'm currently creating fast, responsive, accessible and secure websites at
-            <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow noreferrer" class="link"
-              >Fluid Studios</a
-            >
-            to help benefit businesses.
+            Software Developer based in Cambridge creating fast, responsive, accessible and secure websites and
+            applications to help benefit businesses.
           </p>
-          <a href="#work" class="button">View my Work</a>
+          <a href="#contact" class="button">Contact Me</a>
         </article>
 
-        <img
-          src="./assets/images/illustrations/front-end-web-developer.svg"
-          alt="Front-end Web Developer"
-          title="Front-end Stack Web Developer"
-          class="introduction__illustration"
-        />
+        <figure>
+          <img
+            src="./assets/images/illustrations/software-developer.svg"
+            alt="Software Developer"
+            title="Software Developer"
+            class="introduction__illustration"
+          />
+        </figure>
       </section>
 
-      <hr class="anchor" id="skills" />
+      <!-- <hr class="anchor" id="skills" />
 
       <hr class="separator" />
 
@@ -342,7 +344,7 @@
 
           <p class="content__text">and more.</p>
         </article>
-      </section>
+      </section> -->
 
       <hr class="anchor" id="contact" />
 
@@ -353,8 +355,8 @@
           <h2 class="contact__title">Let's talk</h2>
 
           <p class="contact__text">
-            If you have an idea for a project or you just want to have a chat, please feel free to get in touch with me
-            to see how I can help.
+            If you have an idea for a project or just want to have a chat, please feel free to get in touch with me to
+            see how I can help.
           </p>
 
           <p class="contact__text">
@@ -364,7 +366,7 @@
 
           <p class="contact__text">
             Alternatively, send me an email at
-            <a href="mailto:me@louisyoung.co.uk?subject=Website" class="link">me@louisyoung.co.uk</a>.
+            <a href="mailto:me@louisyoung.co.uk" class="link">me@louisyoung.co.uk</a>.
           </p>
         </article>
 
