--- a/public/src/errors/error.html
+++ b/public/src/errors/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Web Developer - Bespoke Website Development | Louis Young</title>
+    <title>Software Developer - Web Developer | Louis Young</title>
     <meta name="theme-color" content="#4156d0" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -10,31 +10,31 @@
     <!-- SEO start. -->
     <meta
       name="description"
-      content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications to help benefit businesses."
+      content="Software Developer based in Cambridge creating fast, responsive, accessible and secure websites and applications to help benefit businesses. "
     />
     <link rel="canonical" href="https://www.louisyoung.co.uk" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Web Developer - Bespoke Website Development | Louis Young" />
-    <meta property="og:title" content="Louis Young - Web Developer" />
+    <meta property="og:site_name" content="Software Developer - Web Developer | Louis Young" />
+    <meta property="og:title" content="Louis Young - Software Developer" />
     <meta property="og:url" content="https://www.louisyoung.co.uk" />
     <meta
       property="og:description"
-      content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications to help benefit businesses."
+      content="Software Developer based in Cambridge creating fast, responsive, accessible and secure websites and applications to help benefit businesses. "
     />
     <meta
       property="og:image"
-      content="https://www.louisyoung.co.uk/assets/images/illustrations/front-end-web-developer.svg"
+      content="https://www.louisyoung.co.uk/assets/images/illustrations/software-developer.svg"
     />
     <meta name="twitter:site" content="https://www.louisyoung.co.uk" />
-    <meta name="twitter:title" content="Louis Young - Web Developer" />
+    <meta name="twitter:title" content="Louis Young - Software Developer" />
     <meta name="twitter:url" content="https://www.louisyoung.co.uk" />
     <meta
       name="twitter:description"
-      content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications to help benefit businesses."
+      content="Software Developer based in Cambridge creating fast, responsive, accessible and secure websites and applications to help benefit businesses. "
     />
     <meta
       name="twitter:image"
-      content="https://www.louisyoung.co.uk/assets/images/illustrations/front-end-web-developer.svg"
+      content="https://www.louisyoung.co.uk/assets/images/illustrations/software-developer.svg"
     />
     <!-- SEO end. -->
     <!-- Favicon start. -->
@@ -76,7 +76,7 @@
     <header class="header">
       <div class="header__layout container">
         <div class="header__item header__item--left">
-          <a href="/#top" class="logo header__link"
+          <a href="/" class="logo header__link"
             ><span class="logo__text logo__text--dark">Louis</span>
             <span class="logo__text logo__text--light">Young</span></a
           >
@@ -91,6 +91,9 @@
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
+              <a href="/" class="navigation__link header__link">Home</a>
+            </li>
+            <!-- <li class="navigation__item">
               <a href="/#skills" class="navigation__link header__link">Skills</a>
             </li>
             <li class="navigation__item">
@@ -98,7 +101,7 @@
             </li>
             <li class="navigation__item">
               <a href="/#about" class="navigation__link header__link">About</a>
-            </li>
+            </li> -->
             <li class="navigation__item">
               <a
                 href="https://blog.louisyoung.co.uk/"
@@ -132,7 +135,7 @@
         </article>
 
         <img
-          src="./assets/images/illustrations/front-end-web-developer.svg"
+          src="./assets/images/illustrations/software-developer.svg"
           alt="Full Stack Web Developer"
           title="Full Stack Web Developer"
           class="introduction__illustration"
@@ -148,8 +151,8 @@
           <h2 class="contact__title">Let's talk</h2>
 
           <p class="contact__text">
-            If you have an idea for a project or you just want to have a chat, please feel free to get in touch with me
-            to see how I can help.
+            If you have an idea for a project or just want to have a chat, please feel free to get in touch with me to
+            see how I can help.
           </p>
 
           <p class="contact__text">
@@ -159,7 +162,7 @@
 
           <p class="contact__text">
             Alternatively, send me an email at
-            <a href="mailto:me@louisyoung.co.uk?subject=Website" class="link">me@louisyoung.co.uk</a>.
+            <a href="mailto:me@louisyoung.co.uk" class="link">me@louisyoung.co.uk</a>.
           </p>
         </article>
 
@@ -175,7 +178,7 @@
 
     <footer class="footer">
       <div class="footer__layout container">
-        <a href="/#top" class="logo"
+        <a href="/" class="logo"
           ><span class="logo__text logo__text--dark">Louis</span>
           <span class="logo__text logo__text--light">Young</span></a
         >
