--- a/public/src/errors/error.html
+++ b/public/src/errors/error.html
@@ -134,12 +134,14 @@
           <a href="/" class="button">Go Back</a>
         </article>
 
-        <img
-          src="./assets/images/illustrations/software-developer.svg"
-          alt="Full Stack Web Developer"
-          title="Full Stack Web Developer"
-          class="introduction__illustration"
-        />
+        <figure>
+          <img
+            src="./assets/images/illustrations/software-developer.svg"
+            alt="Full Stack Web Developer"
+            title="Full Stack Web Developer"
+            class="introduction__illustration"
+          />
+        </figure>
       </section>
 
       <hr class="anchor" id="contact" />
